# smalpha

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_bonus_1_smalpha.cpp  test_bonus_1_smalpha.hpp  test_bonus_1_smalpha_main.cpp  test_extra_smalpha_main.cpp  test_smalpha.cpp  test_smalpha.hpp  test_smalpha_main.cpp
